--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <img
                 class="socials"
                 src="/images/iconfinder_Neon_Line_Social_Circles_50Icon_10px_grid-13_658579.svg"
-                alt=""
+                alt="facebook"
               />
             </a>
           </li>
@@ -60,7 +60,7 @@
               ><img
                 class="socials"
                 src="/images/iconfinder_Neon_Line_Social_Circles_50Icon_10px_grid-36_658597.svg"
-                alt=""
+                alt="teitter"
               />
             </a>
           </li>
@@ -69,7 +69,7 @@
               <img
                 class="socials"
                 src="/images/iconfinder_Neon_Line_Social_Circles_50Icon_10px_grid-22_658609.svg"
-                alt=""
+                alt="insta"
             /></a>
           </li>
         </ul>
