--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#"
               ><img
                 class="socials"
-                src="/images/iconfinder_neon_line_social_circles_50Icon_10px_grid-36_658597.svg"
+                src="/images/iconfinder_neon_line_social_circles_50Icon_10px_grid-36_658597.png"
                 alt="teitter"
               />
             </a>
@@ -68,7 +68,7 @@
             <a href="#">
               <img
                 class="socials"
-                src="/images/iconfinder_neon_Line_social_circles_50Icon_10px_grid-22_658609.svg"
+                src="/images/iconfinder_neon_Line_social_circles_50Icon_10px_grid-22_658609.png"
                 alt="insta"
             /></a>
           </li>
