--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
-          engage in genuine discussion. Register
+          engage in genuine discussion.
         </p>
         <a class="register" href="#">Register</a>
       </div>
